# opentracker

./: CHANGES.TXT  CMakeLists.txt  ChangeLog  Config.Irix  Config.Linux  Config.global  FindOpenTracker.cmake  INSTALL  INSTALL_win32.txt  Makefile  Makefile.am  Makefile.in  OpenTrackerConfig.cmake  README  README.Debian  README.TXT  SConstruct  Shared.idl  Studierstube.msi  VERSION.TXT  bootstrap  config.h  config.h.in  config_win.h  configure  configure.ac  custom.py  default.py  include.tgz  index.html  makedist.sh  maxwell.dsp  maxwell.dsw  opentracker.dsp  opentracker.dsw  opentracker.sln  opentracker.spec  opentracker.vco  opentracker.vcp  opentracker.vcproj  (+10 more)
ace/netsvcs/: GNUmakefile  Makefile  Makefile.am  Makefile.in  netsvcs.dsw  netsvcs.sln  netsvcs.vcw  netsvcs_Static.dsw  netsvcs_Static.sln
include/OpenTracker/: CMakeLists.txt  OpenTracker.h  PlattformFix.h  dllinclude.h
lib/: Makefile.am  Makefile.in  lib.txt
src/: CMakeLists.txt  CommonNodeFactory.cxx  CommonNodeFactory.h  ConfigurationParser.cxx  ConfigurationParser.h  Context.cxx  Context.h  CursesModule.cxx  CursesModule.h  CursesOutput.cxx  CursesOutput.h  DOMTreeErrorReporter.cxx  DOMTreeErrorReporter.h  Makefile  Makefile.am  Makefile.common  Makefile.in  Marker.cxx  Marker.h  MathUtils.cxx  MathUtils.h  MaxConfidenceFilter.cxx  MaxConfidenceFilter.h  Module.cxx  Module.h  NetworkDriver.cxx  NetworkDriver.h  NetworkModule.cxx  NetworkModule.h  NetworkSource.cxx  NetworkSource.h  NetworkSourceModule.cxx  NetworkSourceModule.h  Node.cxx  Node.h  NodeFactory.cxx  NodeFactory.h  NodeFactoryContainer.cxx  NodeFactoryContainer.h  OpenTracker.cxx  (+28 more)
src/common/: ButtonFilterNode.cxx  ButtonFilterNode.h  ButtonHoldFilterModule.cxx  ButtonHoldFilterModule.h  ButtonHoldFilterNode.cxx  ButtonHoldFilterNode.h  ButtonOpNode.cxx  ButtonOpNode.h  CallbackModule.cxx  CallbackModule.h  CallbackNode.cxx  CallbackNode.h  CallforwardModule.cxx  CallforwardNode.cxx  CommonNodeFactory.cxx  CommonNodeFactory.h  ConfidenceFilterNode.cxx  ConfidenceFilterNode.h  ConfidenceSelectNode.cxx  ConfidenceSelectNode.h  ConsoleModule.cxx  ConsoleModule.h  ConsoleSink.h  ConsoleSource.h  DESP.cxx  DESP.h  DESPFilterNode.cxx  DifferenceNode.cxx  DifferenceNode.h  DynamicTransformation.cxx  DynamicTransformation.h  EEGFilterNode.cxx  ElasticFilterNode.cxx  ElasticFilterNode.h  EllipsoidTransformNode.cxx  EllipsoidTransformNode.h  EventQueueNode.cxx  EventQueueNode.h  EventUtilityNode.cxx  EventUtilityNode.h  (+58 more)
src/core/: CommonNodeFactory.cxx  CommonNodeFactory.h  ConfigNode.h  ConfigurationParser.cxx  ConfigurationParser.h  Configurator.cxx  Context.cxx  Context.h  DOMTreeErrorReporter.cxx  DOMTreeErrorReporter.h  Event.cxx  Event.h  EventAttribute.h  EventAttributeBase.cxx  EventAttributeBase.h  EventGenerator.cxx  EventGenerator.h  EventObserver.h  EventQueue.h  EventQueueImplementation.cxx  EventQueueImplementation.h  EventQueueNode.cxx  EventQueueNode.h  Graph.cxx  LiveContext.cxx  Makefile  Makefile.am  Makefile.in  MathUtils.cxx  MathUtils.h  Module.cxx  Module.h  Node.cxx  Node.h  NodeFactory.h  NodeFactoryContainer.cxx  NodeFactoryContainer.h  NodePort.h  OSUtils.cxx  OSUtils.h  (+31 more)
src/input/: ARTDataTrackerChomp.cxx  ARTDataTrackerChomp.h  ARTDataTrackerModule.cxx  ARTDataTrackerModule.h  ARTDataTrackerSource.cxx  ARTDataTrackerSource.h  ARToolKitModule.cxx  ARToolKitModule.h  ARToolKitMultiMarkerSource.h  ARToolKitPlusModule.cxx  ARToolKitPlusModule.h  ARToolKitSource.h  CalibModule.cxx  CalibSinkSource.cxx  CyberMouseModule.cxx  CyberMouseModule.h  CyberMouseSource.h  DGPSIP_Handler.cxx  DGPSIP_Handler.h  DGPSMirror_Handler.cxx  DGPSMirror_Handler.h  DynaSightModule.cxx  DynaSightModule.h  DynaSightSource.h  FOBModule.cxx  FOBModule.h  FOBSource.h  FastTrakModule.cxx  FastTrakModule.h  FastTrakSource.h  GPSDirectionSource.h  GPSDriver.cxx  GPSDriver.h  GPSGarminAltitude.h  GPSGarminCompass.cxx  GPSGarminCompass.h  GPSInfoSource.h  GPSModule.cxx  GPSModule.h  GPSParser.cxx  (+127 more)
src/misc/: ButterworthFive.cxx  EEGLas.cxx  EEGSub.cxx  Makefile  Makefile.am  Makefile.in  OpenTracker.cxx  XKeys.cxx  XKeys.h  main.cxx  middleware.cxx  portio.cxx  portio.h  pt_ioctl.c  serial.h  serialcomm.cxx  serialcomm.h  standalone.dsp  standalone.vcproj  test.cxx  test.dsp
src/network/: CORBAModule.cxx  CORBAModule.h  CORBASink.cxx  CORBASink.h  CORBASource.h  CORBAUtils.cxx  CORBAUtils.h  DwarfModule.cxx  DwarfModule.h  DwarfSink.h  DwarfSource.h  Makefile  Makefile.am  Makefile.in  Network.h  NetworkSink.h  NetworkSinkModule.cxx  NetworkSinkModule.h  NetworkSource.h  NetworkSourceModule.cxx  NetworkSourceModule.h  OldOTNetworkSourceModule.cxx  PackedOTNetworkSourceModule.cxx  PhantomMiddlewareModule.cxx  TCPModule.cxx  TCPModule.h  TCPSink.h  VRPNModule.cxx  VRPNModule.h  VRPNSink.cxx  VRPNSink.h  VRPNSource.cxx  VRPNSource.h
src/otpy/: PythonModule.cxx  PythonNode.cxx  README.txt
src/otqt/: Makefile.am  OTQt.cxx  OTQt.h  OTQtConfigFileEditor.cxx  OTQtConfigFileEditor.h  OTQtLog.cxx  OTQtLog.h  OTQtMEMCalibProc.cxx  OTQtMEMCalibProc.h  OTQtMath.cxx  OTQtMath.h  QtAppScreen.cxx  QtAppScreen.h  QtAppScreenPosSink.cxx  QtAppScreenPosSink.h  QtMouseButtonSink.cxx  QtMouseButtonSink.h  QtMouseEventCalibModule.cxx  QtMouseEventCalibModule.h  QtMouseEventModule.cxx  QtMouseEventModule.h  QtMouseEventModuleBase.cxx  QtMouseEventModuleBase.h  QtMouseEventSinkBase.cxx  QtMouseEventSinkBase.h  QtMousePosSink.cxx  QtMousePosSink.h  QtMouseWheelSink.cxx  QtMouseWheelSink.h  otqt_mem_calib_main.cxx
src/output/: ConsoleModule.cxx  ConsoleModule.h  ConsoleSink.h  Makefile
src/prop/: PropRegistration.cxx  PropRegistrationModule.cxx  StylusCalibration.cxx  StylusModule.cxx
src/standalones/: CMakeLists.txt  configurable.cxx  corba_configurable.cxx  live_opentracker.cxx  main.cxx  main_ondemand.cxx  main_ubitrack.cxx  middleware.cxx  wii_test.cxx  xmlConfigurableLive.cxx
studierstube3/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  studierstube.dsw  studierstube.sln
(+12978 files in other folders)
