FILE(GLOB_RECURSE SOURCES
  common/*.cxx
  core/*.cxx
  input/*.cxx
  misc/*.cxx
  network/*.cxx
  otpy/*.cxx
  #otqt/*.cxx
  tool/*.cxx
  ubitrack/*.cxx
  prop/*.cxx
  prop/rigidTransform/*.cxx
)


IF(WIN32)
 # ADD_DEFINITIONS(-DOPENTRACKER_EXPORTS -DTINYXML_MOD_DLL -DWIN32 -DOT_NO_INTERSENSE_SUPPORT)
  ADD_DEFINITIONS(-DTINYXML_MOD_DLL -DWIN32 -DWIN32 -DOPENTRACKER_EXPORTS -DCMAKE_BUILD)
ENDIF(WIN32)


IF(OT_USE_ARTOOLKIT)
  ADD_DEFINITIONS(-DUSE_ARTOOLKIT)
ENDIF(OT_USE_ARTOOLKIT)

IF(OT_USE_ARTOOLKITPLUS)
  ADD_DEFINITIONS(-DUSE_ARTOOLKITPLUS)
ENDIF(OT_USE_ARTOOLKITPLUS)

IF(OT_ARTOOLKITPLUS_DLL)
  ADD_DEFINITIONS(-DARTOOLKITPLUS_DLL)
ENDIF(OT_ARTOOLKITPLUS_DLL)

IF(OT_USE_OPENVIDEO)
  ADD_DEFINITIONS(-DUSE_OPENVIDEO)
ENDIF(OT_USE_OPENVIDEO)

IF(OT_USE_TINYXML)
  ADD_DEFINITIONS(-DUSE_TINYXML)
ENDIF(OT_USE_TINYXML)

IF(OT_EXCLUDE_MOBILAB_SUPPORT)
  ADD_DEFINITIONS(-DEXCLUDE_MOBILAB_SUPPORT)
ENDIF(OT_EXCLUDE_MOBILAB_SUPPORT)

IF(OT_USE_MSDEV_DEBUGOUTPUT)
  ADD_DEFINITIONS(-DUSE_MSDEV_DEBUGOUTPUT)
ENDIF(OT_USE_MSDEV_DEBUGOUTPUT)

IF(OT_USE_CYBERMOUSE)
  ADD_DEFINITIONS(-DUSE_CYBERMOUSE)
ENDIF(OT_USE_CYBERMOUSE)

IF(OT_USE_WACOMGRAPHIRE)
  ADD_DEFINITIONS(-DUSE_WACOMGRAPHIRE)
ENDIF(OT_USE_WACOMGRAPHIRE)

IF(OT_USE_JOYSTICK)
  ADD_DEFINITIONS(-DUSE_JOYSTICK)
ENDIF(OT_USE_JOYSTICK)

IF(OT_USE_SPACEDEVICE)
  ADD_DEFINITIONS(-DUSE_SPACEDEVICE)
ENDIF(OT_USE_SPACEDEVICE)

IF(OT_USE_GOGO)
  ADD_DEFINITIONS(-DUSE_GOGO)
ENDIF(OT_USE_GOGO)

IF(OT_USE_PANTILTUNIT)
  ADD_DEFINITIONS(-DUSE_PANTILTUNIT)
ENDIF(OT_USE_PANTILTUNIT)

IF(OT_USE_SAPISPEECH)
  ADD_DEFINITIONS(-DUSE_SAPISPEECH)
ENDIF(OT_USE_SAPISPEECH)

IF(OT_USE_P5GLOVE)
  ADD_DEFINITIONS(-DUSE_P5GLOVE)
ENDIF(OT_USE_P5GLOVE)

IF(OT_USE_DWARF)
  ADD_DEFINITIONS(-DUSE_DWARF)
ENDIF(OT_USE_DWARF)

IF(OT_USE_VRPN)
  ADD_DEFINITIONS(-DUSE_VRPN)
ENDIF(OT_USE_VRPN)

IF(OT_USE_UBISENSE)
  ADD_DEFINITIONS(-DUSE_UBISENSE)
ENDIF(OT_USE_UBISENSE)

IF(OT_USE_RAWINPUT)
  ADD_DEFINITIONS(-DUSE_RAWINPUT)
ENDIF(OT_USE_RAWINPUT)

IF(OT_USE_MIDI)
  ADD_DEFINITIONS(-DUSE_MIDI)
ENDIF(OT_USE_MIDI)

IF(OT_OLD_NETWORK_SUPPORT)
  ADD_DEFINITIONS(-DOLD_NETWORK_SUPPORT)
ENDIF(OT_OLD_NETWORK_SUPPORT)

IF(OT_USE_OTQT)
  ADD_DEFINITIONS(-DUSE_OTQT -DUSE_THREETOTWODIMFILTER)
ENDIF(OT_USE_OTQT)

IF(NOT OT_PROPREGISTRATIONMOUDLE_SUPPORT)
  ADD_DEFINITIONS(-DOT_NO_PROPREGISTRATIONMOUDLE_SUPPORT)
ENDIF(NOT OT_PROPREGISTRATIONMOUDLE_SUPPORT)

# a few files are making troubles and are excluded for the moment:
LIST(REMOVE_ITEM SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/network/CORBAModule.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/network/CORBASink.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/network/CORBAUtils.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/tool/ToolAppWin.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/tool/ToolIOModule.cxx
  ${CMAKE_CURRENT_SOURCE_DIR}/tool/tool.cxx
)

SET(SOURCES ${SOURCES} ../extras/intersense/isense.c)

ADD_SUBDIRECTORY(standalones)
INCLUDE_DIRECTORIES(../extras/intersense)
ADD_LIBRARY(opentracker SHARED ${SOURCES})
IF(WIN32)
TARGET_LINK_LIBRARIES(opentracker ${ACE_LIBRARIES} ${TINY_XML_MOD_LIBRARY} ${CURSES_LIBRARIES} ${XERCESC_LIBRARY} ${ARToolkitPlus_LIBRARY} ${ACE_LIBRARY} newmat)
ELSE(WIN32)
TARGET_LINK_LIBRARIES(opentracker ${ACE_LIBRARIES} ${TINY_XML_MOD_LIBRARY} ${CURSES_LIBRARIES} xerces-c)
ENDIF(WIN32)


IF(OT_USE_PYTHON)
  ADD_DEFINITIONS(-DUSE_PYTHON)
  TARGET_LINK_LIBRARIES(opentracker ${PYTHON_LIBRARIES})
ENDIF(OT_USE_PYTHON)


INSTALL(TARGETS opentracker DESTINATION ${CMAKE_INSTALL_LIBDIR})
SET_TARGET_PROPERTIES(opentracker PROPERTIES VERSION ${CPACK_PACKAGE_VERSION} SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR})